--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "mapbox-gl": "^2.11.0",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-mapbox-ts": "^0.9.3",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0",
-    "axios": "^0.27.2"
+    "vue3-carousel": "^0.2.5",
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
